external-crates/move/crates/move-compiler/tests/move_check/parser/let_binding_missing_fields.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_check/parser/let_binding_missing_fields.move:5:11
  │
5 │     fun g(g: Generic<u64>) {
  │           ^ Unused parameter 'g'. Consider removing or prefixing with an underscore: '_g'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/let_binding_missing_fields.move:6:13
  │
6 │         let Generic<u64> = g; // Test a type name with no field bindings
  │             ^^^^^^^^^^^^ Invalid 'let' binding. To destructure a struct, use '()' for positional fields or '{}' for named fields
